# juggernaut_calculator

./: Cargo.toml  vercel.json
api/: index.rs
assets/: index.html  style.css
data/: users.json
public/: script.js
src/: handlers.rs  lib.rs  logic.rs  main.rs  models.rs
